groupby_feat&timeUtil

--- a/DEA/DEA.ipynb
+++ b/DEA/DEA.ipynb
@@ -67,18 +67,14 @@
      "output_type": "stream",
      "text": [
       "aisles.csv\n",
-      "aisles.csv.zip\n",
       "departments.csv\n",
-      "departments.csv.zip\n",
       "order_products__prior.csv\n",
-      "order_products__prior.csv.zip\n",
       "order_products__train.csv\n",
-      "order_products__train.csv.zip\n",
       "orders.csv\n",
-      "orders.csv.zip\n",
       "products.csv\n",
-      "products.csv.zip\n",
-      "sample_submission.csv.zip\n",
+      "sample_submission.csv\n",
+      "zip\n",
+      "zip.zip\n",
       "\n"
      ]
     }
@@ -116,6 +112,289 @@
     "products_df = pd.read_csv(\"../input/products.csv\")\n",
     "aisles_df = pd.read_csv(\"../input/aisles.csv\")\n",
     "departments_df = pd.read_csv(\"../input/departments.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(49688, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>aisle_id</th>\n",
+       "      <th>department_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Chocolate Sandwich Cookies</td>\n",
+       "      <td>61</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>All-Seasons Salt</td>\n",
+       "      <td>104</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Robust Golden Unsweetened Oolong Tea</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Smart Ones Classic Favorites Mini Rigatoni Wit...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Green Chile Anytime Sauce</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id                                       product_name  aisle_id  \\\n",
+       "0           1                         Chocolate Sandwich Cookies        61   \n",
+       "1           2                                   All-Seasons Salt       104   \n",
+       "2           3               Robust Golden Unsweetened Oolong Tea        94   \n",
+       "3           4  Smart Ones Classic Favorites Mini Rigatoni Wit...        38   \n",
+       "4           5                          Green Chile Anytime Sauce         5   \n",
+       "\n",
+       "   department_id  \n",
+       "0             19  \n",
+       "1             13  \n",
+       "2              7  \n",
+       "3              1  \n",
+       "4             13  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(products_df.shape)\n",
+    "products_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(134, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aisle_id</th>\n",
+       "      <th>aisle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>66</td>\n",
+       "      <td>asian foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>127</td>\n",
+       "      <td>body lotions soap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>oils vinegars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>131</td>\n",
+       "      <td>dry pasta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>51</td>\n",
+       "      <td>preserved dips spreads</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     aisle_id                   aisle\n",
+       "65         66             asian foods\n",
+       "126       127       body lotions soap\n",
+       "18         19           oils vinegars\n",
+       "130       131               dry pasta\n",
+       "50         51  preserved dips spreads"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(aisles_df.shape)\n",
+    "aisles_df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>department_id</th>\n",
+       "      <th>department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>frozen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>bakery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>produce</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>alcohol</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   department_id department\n",
+       "0              1     frozen\n",
+       "1              2      other\n",
+       "2              3     bakery\n",
+       "3              4    produce\n",
+       "4              5    alcohol"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(departments_df.shape)\n",
+    "departments_df.head()"
    ]
   },
   {
@@ -248,12 +527,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "1    11\n",
+       "2    15\n",
+       "3    13\n",
+       "4     6\n",
+       "5     5\n",
+       "Name: order_id, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df.groupby(['user_id']).count().iloc[:,0].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "eval_set\n",
+       "prior    3214874\n",
+       "test       75000\n",
+       "train     131209\n",
+       "Name: order_id, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_df.groupby(['eval_set']).count()[\"order_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "_cell_guid": "07b7e152-8de3-3a18-d286-7158cba15e5d",
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -347,6 +681,38 @@
    "source": [
     "print(order_products_prior_df.shape)\n",
     "order_products_prior_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10a5c0310>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEBCAYAAACDu+UiAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE5VJREFUeJzt3X+Q3HV9x/HnJZcSAhc8h1XUtlI78B5mUOyAJmjAaEEJ\nPwYGdcYGUUEUxaoQpykgYu3QKkJEdIoVaEZ+NDqlTAao/NAKbQnIIIJOtPDGUKmIP3owR3LkIJAf\n/WP32u32bndzt3d799nnYyaT28/n+73P+z25ee0n3/vubt+uXbuQJJVlXrcLkCR1nuEuSQUy3CWp\nQIa7JBXIcJekAhnuklSg/m4X0CgilgAXZ+byCeaPAc6tPewDlgEHZ+bDM1OhJM1+fbPpPveIWA2c\nCmzNzKVtHP9nwGBmnj/txUnSHDLbdu6PAScD1wFExGuBr1DdoT8NnJ6Zm2tzv0v1ieAN3SlVkmav\nWXXNPTNvBF6sG7oK+FjtEs2twOq6uVXAZZm5beYqlKS5Ybbt3BsdBFwREQALgJ8BRMQ84Hjg090r\nTZJmr9ke7gm8LzN/ERFvBl5RGz8YeCQzn+teaZI0e832cP8ocG1E9AO7gA/WxgP4j65VJUmz3Ky6\nW0aS1Bktd+4RsQBYC+wP7AFclJk3182fAFwIbAfWZuZVEbEncD3wMmAEeH9mDnW+fEnSeNq5LPNe\n4OnMPDUiXgr8CLgZ/if4L6N6O+JW4J6IuBk4BdiYmX8REe8BLgA+2WyRoaGRSf8XYnBwEcPDo5M9\nfU6y597Qaz33Wr8w9Z4rlYG+8cbbCfcbgH+sfd1HdYc+5iBgU2YOA0TEBuBIqq8a/WLtmNuAz7Ra\nZHBwEf3989soZ3yVysCkz52r7Lk39FrPvdYvTE/PLcM9M58FiIgBqiF/Qd30YmBz3eMRYJ+G8bGx\npqb4zMXQ0Mikz5+L7Lk39FrPvdYvTL3niZ4Y2noRU0T8HnAXcF1mrqub2gLUf+cB4JmG8bExSdIM\naecXqi8HvgP8aWZ+r2H6YeCA2rX4Z6lekrkUeDVwLHA/sAK4u5NFS5Kaa+ea+/nAIPCZiBi7dn4V\nsFdmXhkRq4A7qP4vYG1mPhkRXwOuqV2DfwFYOQ21S5ImMGvuc5/K3TJep+sN9ly+XusXOnLNfdy7\nZWbVG4dJkjrDcJekAhnuklQgw12SCjTb3xVSkmbE6V+4syvr3rLmxGn5vu7cJalAhrskFchwl6QC\nGe6SVCDDXZIKZLhLUoEMd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQgw12SCmS4S1KB2nrL34hY\nAlycmcvrxvYDvlV32OuBc4GvA78EflYb/35mnteRaiVJbWkZ7hGxGjgV2Fo/npm/AZbXjjkc+Cvg\nKuAPgQcz84ROFytJak87O/fHgJOB68abjIg+4KvAKZm5IyIOBV4VEXcBzwHnZGa2WmRwcBH9/fPb\nr7xBpTIw6XPnKnvuDb3Wc6/1C9PTc8twz8wbI2L/JoecAPy0LsB/DXw+M2+IiGXA9cAbWq0zPDza\nRrnjq1QGGBoamfT5c5E994Ze67nX+h0zlZ4nemLoxC9U3wtcWff4AeAmgMzcALyytruXJM2QToT7\nYcC9dY8/C5wNEBGHAE9k5q4OrCNJatNuf0B2RKwE9s7MKyOiAmxpCO8vANdHxHHAduADHalUktS2\ntsI9Mx8Hlta+Xlc3PkT1Fsj6Y4eB4zpXoiRpd/kiJkkqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQg\nw12SCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJUIMNdkgpkuEtSgQx3SSqQ4S5JBTLc\nJalAbX2GakQsAS7OzOUN4+cAZwBDtaEzgV8A1wMvA0aA99c+a1WSNENa7twjYjVwNbBwnOlDgfdl\n5vLanwQ+CmzMzCOAa4ELOlmwJKm1dnbujwEnA9eNM3cocF5E7Ad8OzM/DywDvlibvw34TDuFDA4u\nor9/fjuHjqtSGZj0uXOVPfeGXuu51/qF6em5Zbhn5o0Rsf8E098C/gbYAqyPiOOBxcDm2vwIsE87\nhQwPj7Zz2LgqlQGGhkYmff5cZM+9odd67rV+x0yl54meGNq65j6eiOgDvpyZm2uPvw38EdWgH1tt\nAHhmsmtIkiZn0uFOdYf+k4g4CNgKvA1YC4wCxwL3AyuAu6dapCRp9+x2uEfESmDvzLwyIs4H7gK2\nAd/LzFsj4l+AayJiA/ACsLKTBUuSWmsr3DPzcWBp7et1dePX0fCL1swcBd7duRIlSbvLFzFJUoEM\nd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQgw12SCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVaCrv\n5z5rnPCpm7qy7tpz39aVdSWpFXfuklQgw12SCmS4S1KBDHdJKpDhLkkFautumYhYAlycmcsbxv8E\nOBvYDmwEzsrMnRHxILCldtjPM/O0zpUsSWqlZbhHxGrgVGBrw/iewEXAazNzNCK+CRwfEd8B+hqf\nCCRJM6ednftjwMnAdQ3j24A3ZeZo3fd6HjgEWFQL+X7g/My8r9Uig4OL6O+f33bhs0GlMtDT63eD\nPZev1/qF6em5Zbhn5o0Rsf844zuB3wJExMeBvYHvAgcDlwJXAwcAt0VEZOb2ZusMD482m56VhoZG\nurZ2pTLQ1fW7wZ7L12v9jplKzxM9MUzpFaoRMQ/4InAg8M7M3BURjwKbMnMX8GhEPA28AnhiKmtJ\nkto31btlvg4sBE6quzxzOrAGICJeCSwGfj3FdSRJu2G3d+4RsZLqJZgHgA8CdwN3RgTA5cDfAd+I\niA3ALuD0VpdkJEmd1Va4Z+bjwNLa1+vqpiba+a+cWlmSpKnwRUySVCDDXZIKZLhLUoEMd0kqkOEu\nSQUy3CWpQIa7JBXIcJekAhnuklQgw12SCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJU\nIMNdkgpkuEtSgdr6DNWIWAJcnJnLG8ZPAC4EtgNrM/OqiNgTuB54GTACvD8zhzpatSSpqZY794hY\nDVwNLGwYXwBcBrwdeAvw4Yh4OfBRYGNmHgFcC1zQ6aIlSc21c1nmMeDkccYPAjZl5nBmvgBsAI4E\nlgG31465DTiqE4VKktrX8rJMZt4YEfuPM7UY2Fz3eATYp2F8bKylwcFF9PfPb+fQWaNSGejp9bvB\nnsvXa/3C9PTc1jX3CWwB6isaAJ5pGB8ba2l4eHQKpXTH0NBI19auVAa6un432HP5eq3fMVPpeaIn\nhqmE+8PAARHxUuBZqpdkLgVeDRwL3A+sAO6ewhqSpEnY7XCPiJXA3pl5ZUSsAu6geu1+bWY+GRFf\nA66JiA3AC8DKjlYsSWqprXDPzMeBpbWv19WN3wLc0nDsKPDuzpUoSdpdvohJkgpkuEtSgQx3SSqQ\n4S5JBTLcJalAhrskFchwl6QCGe6SVCDDXZIKZLhLUoEMd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnu\nklQgw12SCmS4S1KBDHdJKlDLz1CNiHnAFcAhwDbgjMzcVJt7PfDlusOXAicB9wOPAj+pja/PzMs7\nWLckqYl2PiD7JGBhZh4eEUuBNcCJAJn5I2A5QES8G3gyM2+PiKOAb2bmx6enbElSM+2E+zLgdoDM\nvC8iDms8ICL2Aj4HHFkbOhQ4NCL+Ffgv4BOZ+evOlCxJaqWdcF8MbK57vCMi+jNze93YB4EbMvOp\n2uNHgB9m5j9HxCnAV4F3NVtkcHAR/f3zd6P07qtUBnp6/W6w5/L1Wr8wPT23E+5bgPqV5zUEO8Ap\n/N/wvhMYrX29HvjLVosMD4+2OmTWGRoa6dralcpAV9fvBnsuX6/1O2YqPU/0xNDO3TL3AMcC1K65\nb6yfjIh9gD0y84m64auBd9a+/mPgh7tZryRpCtrZua8Hjo6Ie4E+4LSIWAVsysybgQOBxxvOORdY\nGxFnAVuBMzpXsiSplZbhnpk7gY80DD9SN/8DqnfU1J/zc+CtnShQkrT7fBGTJBXIcJekAhnuklQg\nw12SCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJUIMNdkgpkuEtSgQx3SSqQ4S5JBTLc\nJalAhrskFchwl6QCGe6SVKCWn6EaEfOAK4BDgG3AGZm5qW7+cmAZMFIbOhFYAKwD9gR+BZyWmaOd\nLV2SNJF2du4nAQsz83DgXGBNw/yhwDsyc3ntz2bgQmBdZh4BPASc2cmiJUnNtRPuy4DbATLzPuCw\nsYnarv4A4MqIuCciTm88B7gNOKpjFUuSWmp5WQZYDGyue7wjIvozczuwF/BV4EvAfOCuiHig4ZwR\nYJ9WiwwOLqK/f/7u1N51lcpAT6/fDfZcvl7rF6an53bCfQtQv/K8WrADjAKXj11Pj4g7qV6bHzvn\nudrfz7RaZHh47l2SHxoaaX3QNKlUBrq6fjfYc/l6rd8xU+l5oieGdi7L3AMcCxARS4GNdXMHAvdE\nxPyIWED1csyD9ecAK4C7J1e2JGky2tm5rweOjoh7gT7gtIhYBWzKzJsj4jrgPuBF4NrM/GlEXARc\nExEfAp4CVk5T/ZKkcbQM98zcCXykYfiRuvlLgEsazvktcEwnCpQk7T5fxCRJBTLcJalAhrskFchw\nl6QCGe6SVCDDXZIKZLhLUoEMd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQgw12SCmS4S1KBDHdJ\nKpDhLkkFMtwlqUCGuyQVqOVnqEbEPOAK4BBgG3BGZm6qmz8HeE/t4a2Z+bmI6AN+CfysNv79zDyv\no5VLkibUMtyBk4CFmXl4RCwF1gAnAkTEa4BTgCXATmBDRKwHRoEHM/OE6SlbktRMO5dllgG3A2Tm\nfcBhdXNPAMdk5o7M3AUsAJ4HDgVeFRF3RcStEREdrluS1EQ7O/fFwOa6xzsioj8zt2fmi8BTtcsw\nlwAPZeajEbEf8PnMvCEilgHXA29otsjg4CL6++dPso3uqFQGenr9brDn8vVavzA9PbcT7luA+pXn\nZeb2sQcRsRBYC4wAZ9WGHwC2A2Tmhoh4ZUT01Xb34xoeHt3d2rtuaGika2tXKgNdXb8b7Ll8vdbv\nmKn0PNETQzuXZe4BjgWoXXPfODZR27HfBPw4M8/MzB21qc8CZ9eOOQR4olmwS5I6q52d+3rg6Ii4\nF+gDTouIVcAmYD7wFmCPiFhRO/484AvA9RFxHNUd/Ac6XbgkaWItwz0zdwIfaRh+pO7rhROcetxk\ni5IkTY0vYpKkAhnuklQgw12SCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJUIMNdkgpk\nuEtSgQx3SSqQ4S5JBTLcJalAhrskFchwl6QCGe6SVCDDXZIK1PIzVCNiHnAFcAiwDTgjMzfVzX8I\nOJPqB2FflJn/FBH7AuuAPYFfAadl5ug01C9JGkc7O/eTgIWZeThwLrBmbCIi9gM+AbwZeAfw+YjY\nA7gQWJeZRwAPUQ1/SdIMaSfclwG3A2TmfcBhdXNvBO7JzG2ZuRnYBLyu/hzgNuCojlUsSWqp5WUZ\nYDGwue7xjojoz8zt48yNAPs0jI+NNVWpDPS1VfE4bllz4mRPndMqlYFulzDj7Ll83eq3mzkyHT23\ns3PfAtSvPK8W7OPNDQDPNIyPjUmSZkg74X4PcCxARCwFNtbN3Q8cERELI2If4CDgJ/XnACuAuztW\nsSSppb5du3Y1PaDubpnXAX3AaVSDe1Nm3ly7W+bDVJ8o/jozb4yIlwPXUN21PwWszMyt09eGJKle\ny3CXJM09vohJkgpkuEtSgQx3SSpQO/e5zwqTeRuErhTaQW30fA7wntrDWzPzczNfZWe16rnumG8D\nN2Xm3858lZ3Vxr/zCuCzVG9o+CHwscyc078sa6PnTwErgZ1Ub9RY35VCOywilgAXZ+byhvETqL6y\nfzuwNjOvmupac2nnPpm3QZjrmvX8GuAU4E3AUuDtEfG6rlTZWRP2XOciYHBGq5pezf6dB4BLgOMz\ncwnwOLBvN4rssGY9vwT4JHA48Hbgy12psMMiYjVwNbCwYXwBcBnVXt8CfLh2x+GUzKVwn8zbIMx1\nzXp+AjgmM3fUdnELgOdnvsSOa9YzEfEuqru52///qXNWs57fRPW1JWsi4m7gt5k5NPMldlyznrcC\n/wnsVfuzc8armx6PASePM34Q1VvLhzPzBWADcORUF5tL4T7u2yBMMNfWWx7MARP2nJkvZuZTEdEX\nEZcCD2Xmo12psrMm7DkiDqb6X/ULu1HYNGr2s70v8Fbgz6m+IPDsiDhwhuubDs16hurm5d+BB4Gv\nzGRh0yUzbwReHGdqWvJrLoX7ZN4GYa5r1jMRsRD4+9oxZ81wbdOlWc/vA14F3Al8AFgVEcfMbHnT\nolnPTwM/yMzfZOazwL8Br5/pAqdBs55XAK8A/gD4feCkiHjjDNc3k6Ylv+ZSuE/mbRDmugl7jog+\n4Cbgx5l5Zmbu6E6JHTdhz5m5OjOX1H4Z9Q3gS5lZwuWZZj/bDwIHR8S+tZ3tUqo72rmuWc/DwHPA\ntsx8nmrQvWTGK5w5DwMHRMRLI+J3qF6S+f5Uv+mcuVsGWA8cHRH3UnsbhIhYxf++DcJXqL6HzTzg\n07Ufirluwp6B+VR/+bJH7W4KgPMyc8o/FF3W9N+5u6VNm1Y/2+cBd9SO/YfMLGHj0qrno4D7ImIn\n1WvQ3+1irdMiIlYCe2fmlbXe76CaX2sz88mpfn/ffkCSCjSXLstIktpkuEtSgQx3SSqQ4S5JBTLc\nJalAhrskFchwl6QC/Tdl8Ah+I/u5fgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10a5c0090>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "order_products_prior_df.reordered.hist()"
    ]
   },
   {
@@ -1981,7 +2347,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
