--- a/model/xgb_starter.ipynb
+++ b/model/xgb_starter.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "10f6d636-8ca5-4c75-ac38-ee2e9a2d4a76",
     "_execution_state": "busy",
@@ -590,147 +590,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>_user_mean_days_since_prior_order</th>\n",
-       "      <th>_user_sum_days_since_prior_order</th>\n",
-       "      <th>_user_total_orders</th>\n",
-       "      <th>_user_total_products</th>\n",
-       "      <th>_user_distinct_products</th>\n",
-       "      <th>_user_reorder_ratio</th>\n",
-       "      <th>_user_average_basket</th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>eval_set</th>\n",
-       "      <th>time_since_last_order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>19.555555</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>59</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.900000</td>\n",
-       "      <td>1187899</td>\n",
-       "      <td>train</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>15.230769</td>\n",
-       "      <td>198.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>195</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.928571</td>\n",
-       "      <td>1492625</td>\n",
-       "      <td>train</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>12.090909</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>88</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.333333</td>\n",
-       "      <td>2774568</td>\n",
-       "      <td>test</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>13.750000</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.600000</td>\n",
-       "      <td>329954</td>\n",
-       "      <td>test</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>13.333333</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>37</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.250000</td>\n",
-       "      <td>2196797</td>\n",
-       "      <td>train</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   user_id  _user_mean_days_since_prior_order  \\\n",
-       "0        1                          19.555555   \n",
-       "1        2                          15.230769   \n",
-       "2        3                          12.090909   \n",
-       "3        4                          13.750000   \n",
-       "4        5                          13.333333   \n",
-       "\n",
-       "   _user_sum_days_since_prior_order  _user_total_orders  _user_total_products  \\\n",
-       "0                             176.0                  10                    59   \n",
-       "1                             198.0                  14                   195   \n",
-       "2                             133.0                  12                    88   \n",
-       "3                              55.0                   5                    18   \n",
-       "4                              40.0                   4                    37   \n",
-       "\n",
-       "   _user_distinct_products  _user_reorder_ratio  _user_average_basket  \\\n",
-       "0                       18                    0              5.900000   \n",
-       "1                      102                    0             13.928571   \n",
-       "2                       33                    0              7.333333   \n",
-       "3                       17                    0              3.600000   \n",
-       "4                       23                    0              9.250000   \n",
-       "\n",
-       "   order_id eval_set  time_since_last_order  \n",
-       "0   1187899    train                   14.0  \n",
-       "1   1492625    train                   30.0  \n",
-       "2   2774568     test                   11.0  \n",
-       "3    329954     test                   30.0  \n",
-       "4   2196797    train                    6.0  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'users' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-02b4641fa5c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'users' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1123,7 +991,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1159,7 +1029,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
